# Lab-Avanzado

./: Documents  Documents.pub
ConstantePlanck/: Constante.csv  constante.gnu  prueba.cpp  script.cpp
ConstantePlanck/Datos/: Constante.csv  Naranja.csv  NaranjaDestapado.csv  NaranjaTapado.csv  Rojo.csv  RojoDestapado.csv  RojoDestapadoZoomeado.csv  RojoTapado.csv  RojoTapadoZoomeado.csv  Ultravioleta.csv  UltravioletaDestapado.csv  UltravioletaTapado.csv  Verde.csv  VerdeTapado.csv  Violeta.csv  VioletaDestapado.csv  VioletaTapado.csv
Tareas/T1_III_3/: T1.III.3.aux  T1.III.3.tex
Tareas/T1_II_2/: T3.aux  T3.tex  persona.cpp
Tareas/T1_II_2/código/: class02.cpp  persona.hpp
Tareas/T1_II_3/: CMakeLists.txt  T1_II_3.aux  T1_II_3.tex  VecR3.cpp  VecR3.hpp  a.out  main.cpp  prueba.cpp
Tareas/T1_II_3/include/: VecR3.hpp
Tareas/T1_II_3/pdf/: T1_II_3.tex
Tareas/T1_II_3/src/: VecR3.cpp
Tareas/T1_I_1/: T1.aux  T1.bbl  T1.blg  T1.tex  referencias.bib
Tareas/T1_I_2/: T2.aux  T2.blg  T2.tex  class01.cpp  simple.cpp
Tareas/T1_I_2/código/: simple.hpp
